# dnevnikru-bot

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: __main__.py  config.py  dnevnikru.py  filters.py  fmt.py
app/routers/: chat.py
